[Separate Models] Consistent package's names.